Enhance documentation and validation scripts for Fitness Club Membership System
- Added testing and validation sections to README.md
- Updated pre-sprint setup instructions to include 'requests' dependency
- Created a detailed 45-minute live coding guide for presenters
- Improved validate_application.py with usage instructions and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ blinker==1.6.3
 # Development & Testing
 pytest==7.4.3
 pytest-flask==1.3.0
+requests==2.31.0
 
 # Optional: Production Deployment
 gunicorn==21.2.0
